--- a/SiqCloset.Web/app/customerItemList/customerItemList.html
+++ b/SiqCloset.Web/app/customerItemList/customerItemList.html
@@ -1,7 +1,9 @@
 ﻿<section id="mainbar" class="mainbar" data-ng-controller="customerItemList as vm">
     <section class="matter">
         <div class="container-fluid">
-            
+            <div class="widget wlightblue">
+                <div data-cc-widget-header title="Edit Batch {{vm.batchID || 'New Batch'}}"></div>
+            </div>
         </div>
     </section>
 </section>
