Issue 3 - Display items list in grid mode

--- a/SiqCloset.Web/app/customerItemList/customerItemList.html
+++ b/SiqCloset.Web/app/customerItemList/customerItemList.html
@@ -3,6 +3,9 @@
         <div class="container-fluid">
             <div class="widget wlightblue">
                 <div data-cc-widget-header title="Edit Batch {{vm.batchID || 'New Batch'}}"></div>
+                <div class="widget-content user">
+                    <div class="gridStyle" data-ng-grid="itemsGridOptions"></div>
+                </div>
             </div>
         </div>
     </section>
