Issue 3 - Fix styling, column ordering and width

--- a/SiqCloset.Web/app/customerItemList/customerItemList.html
+++ b/SiqCloset.Web/app/customerItemList/customerItemList.html
@@ -4,7 +4,7 @@
             <div class="widget wlightblue">
                 <div data-cc-widget-header title="Edit Batch {{vm.batchID || 'New Batch'}}"></div>
                 <div class="widget-content user">
-                    <div class="gridStyle" data-ng-grid="itemsGridOptions"></div>
+                    <div class="gridStyle2" data-ng-grid="itemsGridOptions"></div>
                 </div>
             </div>
         </div>
