Issue 3 - Added capabilities to view batch details

--- a/SiqCloset.Web/index.html
+++ b/SiqCloset.Web/index.html
@@ -96,8 +96,8 @@
     <script src="app/wip/wip.js"></script>
     <script src="app/upload/customerItemList/customerItemList.js"></script>
     <script src="app/upload/masterCustomerAddress/masterCustomerAddress.js"></script>
-    <script src="app/customerItemList/batches.js"></script>
-    <script src="app/customerItemList/customerItemList.js"></script>
+    <script src="app/batch/batches.js"></script>
+    <script src="app/batch/batchDetails.js"></script>
 
     <!-- app Services -->
     <script src="app/services/datacontext.js"></script>
