--- a/SiqCloset.Web/app/upload/customerItemList/customerItemList.html
+++ b/SiqCloset.Web/app/upload/customerItemList/customerItemList.html
@@ -1,4 +1,4 @@
-﻿<section class="mainbar" data-ng-controller="customerItemList as vm">
+﻿<section class="mainbar" data-ng-controller="uploadCIL as vm">
     <section class="matter">
         <div class="container-fluid">
             <div class="row-fluid">
