--- a/SiqCloset.Web/index.html
+++ b/SiqCloset.Web/index.html
@@ -98,6 +98,7 @@
     <script src="app/upload/masterCustomerAddress/masterCustomerAddress.js"></script>
     <script src="app/batch/batches.js"></script>
     <script src="app/batch/batchDetails.js"></script>
+    <script src="app/batch/orderCustomerLookupsBy.js"></script>
 
     <!-- app Services -->
     <script src="app/services/datacontext.js"></script>
