Comment out bottom part in customerDetails.html

--- a/SiqCloset.Web/app/customer/customerDetails.html
+++ b/SiqCloset.Web/app/customer/customerDetails.html
@@ -43,7 +43,7 @@
                 </div>
             </div>
             
-            <div class="widget wred">
+            <!-- <div class="widget wred">
                 <div data-cc-widget-header title="{{vm.getSelectedTitle()}}"></div>
                 <div class="widget-content user">
                     <div>
@@ -65,7 +65,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </div> -->
         </div>
     </section>
 </section>
