Issue #13 - Create dropdown to show list of boxes

--- a/SiqCloset.Web/app/customer/customerDetails.html
+++ b/SiqCloset.Web/app/customer/customerDetails.html
@@ -49,7 +49,7 @@
                     <div>
                         <div>
                             <label>Select customer:</label>
-                            <select data-ng-options="c.name for c in vm.customersToSelect" data-ng-model="vm.selectedCustomer"></select>
+                            <select data-ng-options="c.name for c in vm.customersToSelect" data-ng-model="vm.selectedCustomer" />
                         </div>
                         <div>
                             <label>Full Name</label>
