--- a/SiqCloset.Web/app/batch/custSelTmplTypeAhead.html
+++ b/SiqCloset.Web/app/batch/custSelTmplTypeAhead.html
@@ -4,8 +4,8 @@
            typeahead="customer.name for customer in vm.customerLookups | filter:{name: $viewValue}:startsWith | limitTo:8"
            typeahead-on-select="vm.onSelect($item, $model, $label)" /> -->
 
-           <input type="text" 
-           data-ng-model="COL_FIELD" 
+    <input type="text"
+           data-ng-model="COL_FIELD"
            typeahead="customer.name for customer in vm.customerLookups | orderCustomerLookupsBy:$viewValue | orderBy:'relevance' | limitTo:8"
-           typeahead-on-select="vm.onSelect($item, $model, $label)" />
+           typeahead-on-select="vm.onCustomerSelect($item, $model, $label)" />
 </div>
