--- a/SiqCloset.Web/index.html
+++ b/SiqCloset.Web/index.html
@@ -115,5 +115,6 @@
     <script src="app/services/repository.customer.js"></script>
     <script src="app/services/repository.item.js"></script>
     <script src="app/services/repository.batch.js"></script>
+    <script src="app/services/repository.box.js"></script>
 </body>
 </html>
