Customer Item List - Allow creation of new batch and adding of new items

--- a/SiqCloset.Web/app/batch/batchDetails.html
+++ b/SiqCloset.Web/app/batch/batchDetails.html
@@ -17,6 +17,10 @@
                         data-ng-disabled="!vm.canAddNewBox">
                     <i class="icon-plus-sign"></i>Add New Box
                 </button>
+                <button class="btn btn-info"
+                        data-ng-click="vm.addNewItem()">
+                    <i class="icon-barcode"></i>Add New Item
+                </button>
                 <span data-ng-show="vm.hasChanges" class="dissolve-animation ng-hide">
                     <i class="icon-asterisk icon-asterisk-large"></i>
                 </span>
