Customer Item List - Add New Customer

--- a/SiqCloset.Web/app/batch/batchDetails.html
+++ b/SiqCloset.Web/app/batch/batchDetails.html
@@ -21,6 +21,10 @@
                         data-ng-click="vm.addNewItem()">
                     <i class="icon-barcode"></i>Add New Item
                 </button>
+                <button class="btn btn-info"
+                        data-ng-click="vm.addNewCustomer()">
+                    <i class="icon-user"></i>Add New Customer
+                </button>
                 <span data-ng-show="vm.hasChanges" class="dissolve-animation ng-hide">
                     <i class="icon-asterisk icon-asterisk-large"></i>
                 </span>
