Bring in the Breeze.Angular service into app.js. Fix up index.html script refs

--- a/SiqCloset.Web/index.html
+++ b/SiqCloset.Web/index.html
@@ -63,8 +63,8 @@
     <script src="scripts/spin.js"></script>
     <script src="scripts/q.js"></script>
     <script src="scripts/breeze.debug.js"></script>
-    <script src="scripts/breeze.directives.validation.js"></script>
-    <script src="scripts/breeze.to$q.js"></script>
+    <script src="scripts/breeze.angular.js"></script>
+    <script src="scripts/breeze.directives.js"></script>
     <script src="scripts/breeze.saveErrorExtensions.js"></script>
     <script src="scripts/xls.js"></script>
     <script src="scripts/angular-file-upload.js"></script>
