--- a/SiqCloset.Web/SpecRunner.html
+++ b/SiqCloset.Web/SpecRunner.html
@@ -75,13 +75,9 @@
     <script src="app/customer/customers.js"></script>
 
     <!-- include source files here... -->
-    <script type="text/javascript" src="/Scripts/jasmine-samples/SpecHelper.js"></script>
-    <!--<script type="text/javascript" src="/Scripts/jasmine-samples/PlayerSpec.js"></script>-->
-    <script type="text/javascript" src="/tests/tests.js"></script>
-
-    <!-- include spec files here... -->
-    <script type="text/javascript" src="/Scripts/jasmine-samples/Player.js"></script>
-    <script type="text/javascript" src="/Scripts/jasmine-samples/Song.js"></script>
+    <!--<script type="text/javascript" src="/tests/tests.js"></script>-->
+    <script type="text/javascript" src="/tests/breezeTests.js"></script>
+    
 </head>
 
 <body>
