Added excel tests. Modify customerItemListReader to be more robust.

--- a/SiqCloset.Web/SpecRunner.html
+++ b/SiqCloset.Web/SpecRunner.html
@@ -73,11 +73,13 @@
     <script src="app/services/repository.box.js"></script>
 
     <!-- controllers to be tested -->
-    <script src="app/customer/customers.js"></script>
+    <!--<script src="app/customer/customers.js"></script>-->
+    <script src="app/services/customerItemListReader.js"></script>
 
     <!-- include source files here... -->
     <!--<script type="text/javascript" src="/tests/tests.js"></script>-->
-    <script type="text/javascript" src="/tests/breezeTests.js"></script>
+    <!--<script type="text/javascript" src="/tests/breezeTests.js"></script>-->
+    <script type="text/javascript" src="/tests/excelTests.js"></script>
 
 </head>
 
