Changed some color theme

--- a/SiqCloset.Web/app/batch/batches.html
+++ b/SiqCloset.Web/app/batch/batches.html
@@ -12,7 +12,7 @@
                     </div>
             </div>
             <div class="row-fluid">
-                <div class="widget worange">
+                <div class="widget wblue">
                     <div data-cc-widget-header title="{{vm.title}}" subtitle="{{vm.batches.length}}"></div>
                     <div class="widget-content user">
                         <div class="padd" data-ng-repeat="b in vm.batchPartials" data-ng-click="vm.goToBatch(b)">
