--- a/SiqCloset.Web/app/dashboard/dashboard.html
+++ b/SiqCloset.Web/app/dashboard/dashboard.html
@@ -4,7 +4,7 @@
             <div class="row-fluid">
                 <div class="span12">
                     <ul class="today-datas">
-                        <li class="blightblue">
+                        <li class="bblue">
                             <div class="pull-left"><i class="icon-plane"></i></div>
                             <div class="datas-text pull-right">
                                 <span class="bold">May 18 - 19, 2015</span> Castle
@@ -26,7 +26,7 @@
             </div>
             <div class="row-fluid">
                 <div class="span4">
-                    <div class="widget wviolet">
+                    <div class="widget wblue">
                         <div data-cc-widget-header title="{{vm.customerSummary.title}}"
                              allow-collapse="true">
                         </div>
@@ -54,7 +54,7 @@
                     </div>
                 </div>
                 <div class="span8">
-                    <div class="widget wviolet" data-ng-controller="wip as vm">
+                    <div class="widget wblue" data-ng-controller="wip as vm">
                         <div data-cc-widget-header
                              title="{{vm.title}}"
                              subtitle="{{vm.wip.length}}"
@@ -71,9 +71,9 @@
             </div>
             <div class="row-fluid">
                 <div class="span12">
-                    <div class="widget wgreen">
+                    <div class="widget wblue">
                         <div data-cc-widget-header title="{{vm.news.title}}"
-                            allow-collapse="true">
+                             allow-collapse="true">
                         </div>
                         <div class="widget-content text-center text-info">
                             <small>{{vm.news.description}}</small>
