--- a/SiqCloset.Web/app/upload/customerItemList/customerItemList.html
+++ b/SiqCloset.Web/app/upload/customerItemList/customerItemList.html
@@ -2,16 +2,16 @@
     <section class="matter">
         <div class="container-fluid">
             <div class="row-fluid">
-                <div class="widget wviolet">
+                <div class="widget wblue">
                     <div data-cc-widget-header title="{{vm.title}}"></div>
                     <div class="widget-content user">
                         <input type="file" ng-file-select="vm.onFileSelect($files)" />
-                        <input type="text" class="span1" placeholder="Batch #..." data-ng-model="vm.batchNumber"/>
+                        <input type="text" class="span1" placeholder="Batch #..." data-ng-model="vm.batchNumber" />
                         <a class="btn btn-info" data-ng-click="vm.saveCustomerItemList()">
                             <i class="icon-save"></i>
                             <span>Save Customer Item List</span>
                         </a>
-                        
+
                     </div>
                     <div class="widget-foot">
                         <div class="clearfix"></div>
