--- a/SiqCloset.Web/app/wip/wip.html
+++ b/SiqCloset.Web/app/wip/wip.html
@@ -11,11 +11,11 @@
                     data-ng-disabled="!vm.wip.length">
                 <i class="icon-save"></i> Save all Work in Progress
             </button>
-            <div class="widget wviolet">
-                <div data-cc-widget-header title="{{vm.title}}" 
-                    subtitle="{{vm.wip.length}}"></div>
+            <div class="widget wblue">
+                <div data-cc-widget-header title="{{vm.title}}"
+                     subtitle="{{vm.wip.length}}"></div>
                 <div class="widget-content"
-                    data-ng-include="'/app/wip/wipWidget.html'">
+                     data-ng-include="'/app/wip/wipWidget.html'">
                 </div>
                 <div class="widget-foot">
                     <div class="clearfix"></div>
