--- a/SiqCloset.Web/app/upload/masterCustomerAddress/masterCustomerAddress.html
+++ b/SiqCloset.Web/app/upload/masterCustomerAddress/masterCustomerAddress.html
@@ -2,7 +2,7 @@
     <section class="matter">
         <div class="container-fluid">
             <div class="row-fluid">
-                <div class="widget wviolet">
+                <div class="widget wblue">
                     <div data-cc-widget-header title="{{vm.title}}"></div>
                     <div class="widget-content user">
                         <input type="file" ng-file-select="vm.onFileSelect($files)" />
