Dashboard - Show Currency Exchange rate by querying remote service

--- a/SiqCloset.Web/app/dashboard/dashboard.html
+++ b/SiqCloset.Web/app/dashboard/dashboard.html
@@ -20,6 +20,14 @@
                             </div>
                             <div class="clearfix"></div>
                         </li>
+                        
+                        <li class="bblue">
+                            <div class="pull-left"><i class="icon-money"></i></div>
+                            <div class="datas-text pull-right">
+                                <span class="bold">{{vm.exchangeRateText}}</span>
+                            </div>
+                            <div class="clearfix"></div>
+                        </li>
 
                     </ul>
                 </div>
