--- a/SiqCloset.Web/index.html
+++ b/SiqCloset.Web/index.html
@@ -87,7 +87,8 @@
     <!-- common.bootstrap Modules -->
     <script src="app/common/bootstrap/bootstrap.dialog.js"></script>
 
-   <!-- app Services -->
+    <!-- app Services -->
+    <script src="app/services/currencyExchange.js"></script>
     <script src="app/services/datacontext.js"></script>
     <script src="app/services/directives.js"></script>
     <script src="app/services/entityManagerFactory.js"></script>
@@ -102,7 +103,7 @@
     <script src="app/services/repository.item.js"></script>
     <script src="app/services/repository.batch.js"></script>
     <script src="app/services/repository.box.js"></script>
-    
+
     <!-- app -->
     <script src="app/dashboard/dashboard.js"></script>
     <script src="app/layout/shell.js"></script>
