Dashboard spec tests. Minor clean up.

--- a/SiqCloset.Web/SpecRunner.html
+++ b/SiqCloset.Web/SpecRunner.html
@@ -79,7 +79,7 @@
     <!-- include source files here... -->
     <!--<script type="text/javascript" src="/tests/tests.js"></script>-->
     <!--<script type="text/javascript" src="/tests/breezeTests.js"></script>-->
-    <script type="text/javascript" src="/tests/excelTests.js"></script>
+    <script type="text/javascript" src="/tests/excel.specs.js"></script>
 
 </head>
 
