--- a/SiqCloset.Web/app/customer/customers.html
+++ b/SiqCloset.Web/app/customer/customers.html
@@ -12,7 +12,7 @@
             </div>
             <div class="row-fluid">
                 <div class="widget wblue">
-                    <div data-cc-widget-header title="{{vm.title}}" subtitle="{{vm.customers.length}}"></div>
+                    <div data-cc-widget-header title="{{vm.title}}" subtitle="{{vm.customerPartials.length}}"></div>
                     <div class="widget-content user">
                         <div class="padd" data-ng-repeat="c in vm.customerPartials" data-ng-click="vm.goToCustomer(c)">
                             <div class="user" title="Go to customer details">
