Take advantage of metadata.js script so client doesn't have to ask server for metadata

--- a/SiqCloset.Web/index.html
+++ b/SiqCloset.Web/index.html
@@ -78,6 +78,7 @@
     <script src="app/config.js"></script>
     <script src="app/config.exceptionHandler.js"></script>
     <script src="app/config.route.js"></script>
+    <script src="app/metadata.js"></script>
 
     <!-- common Modules -->
     <script src="app/common/common.js"></script>
