--- a/SiqCloset.Web/app/customer/customers.html
+++ b/SiqCloset.Web/app/customer/customers.html
@@ -3,6 +3,10 @@
         <div class="container-fluid">
             <div class="row-fluid">
                 <div class="form-search">
+                    <input class="input-medium search-query"
+                           data-ng-model="vm.searchText"
+                           data-ng-keyup="vm.search($event)"
+                           placeholder="Type a customer name..." />
                     <div class="btn-group pull-left">
                         <a class="btn btn-info" href="#/customer/new">
                             <i class="icon-plus"></i><span>Add Customer</span>
@@ -12,9 +16,9 @@
             </div>
             <div class="row-fluid">
                 <div class="widget wblue">
-                    <div data-cc-widget-header title="{{vm.title}}" subtitle="{{vm.customerPartials.length}}"></div>
+                    <div data-cc-widget-header title="{{vm.title}}" subtitle="{{vm.filteredCustomerPartials.length}} / {{vm.customerPartials.length}}"></div>
                     <div class="widget-content user">
-                        <div class="padd" data-ng-repeat="c in vm.customerPartials" data-ng-click="vm.goToCustomer(c)">
+                        <div class="padd" data-ng-repeat="c in vm.filteredCustomerPartials" data-ng-click="vm.goToCustomer(c)">
                             <div class="user" title="Go to customer details">
                                 <h6>{{c.name}}</h6>
                                 <!--<h6>{{c.address}}</h6>
