--- a/SiqCloset.Web/app/wip/wipWidget.html
+++ b/SiqCloset.Web/app/wip/wipWidget.html
@@ -11,14 +11,30 @@
                 <th><a data-ng-click="vm.setSort('date')" href="">Date Changed</a></th>
             </tr>
         </thead>
-        <tbody>
-            <tr data-ng-repeat="item in vm.wip | orderBy: vm.predicate:vm.reverse"
-                data-ng-click="vm.goToWip(item)" tooltip-html-unsafe="{{vm.getDetails(item)}}">
+        <tbody data-ng-repeat="item in vm.wip | orderBy: vm.predicate:vm.reverse">
+            <tr data-ng-click="vm.goToWip(item)" data-sc-wip-peek="item">
+
+                <!--sc-show-tooltip entity="item">-->
+                <!--tooltip-html-unsafe="{{vm.getDetails(item)}}">-->
+
                 <td>{{item.entityName}}</td>
                 <td>{{item.description}}</td>
                 <td>{{item.state}}</td>
                 <td>{{item.date | date: 'MM/dd/yyyy @ h:mma'}}</td>
+
             </tr>
+            <!--<tr data-ng-repeat="item in vm.wip | orderBy: vm.predicate:vm.reverse"
+            data-ng-click="vm.goToWip(item)" data-sc-wip-peek="item">
+
+            <!--sc-show-tooltip entity="item">-->
+            <!--tooltip-html-unsafe="{{vm.getDetails(item)}}">
+
+                <td>{{item.entityName}}</td>
+                <td>{{item.description}}</td>
+                <td>{{item.state}}</td>
+                <td>{{item.date | date: 'MM/dd/yyyy @ h:mma'}}</td>
+
+            </tr>-->
         </tbody>
 
     </table>
