--- a/SiqCloset.Web/index.html
+++ b/SiqCloset.Web/index.html
@@ -54,7 +54,8 @@
     <script src="scripts/jquery-2.0.3.js"></script>
     <script src="scripts/angular.js"></script>
     <script src="scripts/angular-animate.js"></script>
-    <script src="scripts/angular-route.js"></script>
+    <!--<script src="scripts/angular-route.js"></script>-->
+    <script src="scripts/angular-ui-router.js"></script>
     <script src="scripts/angular-sanitize.js"></script>
     <script src="scripts/bootstrap.js"></script>
     <script src="scripts/toastr.js"></script>
